--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 
-      .emptyMessage {
-        font-weight: bold;
-        color: red;
-        font-size: 1.2em;
-      }
 
-      li {
-        margin-bottom: 7px;
-        font-size: 1.2em;
+body {
+    background-color: aliceblue;
+    margin-top: 10%;
+}
 
-      }
-      li > button {
-        margin-left: 6px;
-      }
+.container {
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: block;
+    width: 50%;
+    padding: 40px 0px;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    background-color: white;
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    
+}
 
-      button > span {
-        color: green;
-      }
+h1, h2, .emptyMessage {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+h1 {
+    font-weight: 600;
+}
+
+.emptyMessage {
+    font-weight: bold;
+    color: red;
+    font-size: 1.2em;
+}
+
+ul {
+    margin: 2% 8%;
+    padding: 0px;
+    display: block;
+    text-align: center;
+    list-style-type: none;
+}
+
+li {
+    margin-bottom: 7px;
+    font-size: 1.2em;
+}
+
+li > button {
+    margin-left: 6px;
+    margin-top: 3px;
+}
+
+.btn {
+    padding: 3px 10px;
+}
+
+button > span {
+    color: green;
+}
+
+
+@media only screen and (max-width: 1300px) {
+    ul {
+        margin: 2% 0px;
+        display: block;
+    }
+    
+}
+
+
+
+@media only screen and (max-width: 1400px) {
+    .container    {
+        width: 70%;
+    }
+    
+    h2 {
+        margin-top: 30px;
+    }
+    
+    ul {
+        padding: 10px 10px;
+    }
+     
+}
+
+
+@media only screen and (max-width: 576px) {
+    .container    {
+        width: 90%;
+    }
+
+}
